; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_bufferevent_openssl.c_be_openssl_handshakeeventcb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/sntp/libevent/extr_bufferevent_openssl.c_be_openssl_handshakeeventcb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferevent_openssl = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@EV_TIMEOUT = common dso_local global i16 0, align 2
@BEV_EVENT_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i16, i8*)* @be_openssl_handshakeeventcb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @be_openssl_handshakeeventcb(i32 %0, i16 signext %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i8*, align 8
  %7 = alloca %struct.bufferevent_openssl*, align 8
  store i32 %0, i32* %4, align 4
  store i16 %1, i16* %5, align 2
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.bufferevent_openssl*
  store %struct.bufferevent_openssl* %9, %struct.bufferevent_openssl** %7, align 8
  %10 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %7, align 8
  %11 = getelementptr inbounds %struct.bufferevent_openssl, %struct.bufferevent_openssl* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = call i32 @bufferevent_incref_and_lock_(i32* %12)
  %14 = load i16, i16* %5, align 2
  %15 = sext i16 %14 to i32
  %16 = load i16, i16* @EV_TIMEOUT, align 2
  %17 = sext i16 %16 to i32
  %18 = and i32 %15, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %3
  %21 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %7, align 8
  %22 = getelementptr inbounds %struct.bufferevent_openssl, %struct.bufferevent_openssl* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* @BEV_EVENT_TIMEOUT, align 4
  %25 = call i32 @bufferevent_run_eventcb_(i32* %23, i32 %24, i32 0)
  br label %29

26:                                               ; preds = %3
  %27 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %7, align 8
  %28 = call i32 @do_handshake(%struct.bufferevent_openssl* %27)
  br label %29

29:                                               ; preds = %26, %20
  %30 = load %struct.bufferevent_openssl*, %struct.bufferevent_openssl** %7, align 8
  %31 = getelementptr inbounds %struct.bufferevent_openssl, %struct.bufferevent_openssl* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = call i32 @bufferevent_decref_and_unlock_(i32* %32)
  ret void
}

declare dso_local i32 @bufferevent_incref_and_lock_(i32*) #1

declare dso_local i32 @bufferevent_run_eventcb_(i32*, i32, i32) #1

declare dso_local i32 @do_handshake(%struct.bufferevent_openssl*) #1

declare dso_local i32 @bufferevent_decref_and_unlock_(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
